--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -246,7 +246,10 @@
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
-                <small>Copyright © Your Website 2018</small>
+                <small>
+                    <i class="fa fa-copyright"></i>
+                    SMIT 04
+                </small>
             </div>
         </div>
     </footer>
