--- a/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
@@ -28,6 +28,7 @@
                         @*<th>時間差</th>*@
                         <th>客戶電話</th>
                         <th>座位</th>
+                        <th>訂單小計</th>
                         <th>訂單狀況</th>
                     </tr>
                 </thead>
@@ -37,17 +38,29 @@
 
                     @foreach (var order in Model)
 
-                    {
-                        <tr class="orderListItem" data-orderid="@order.orderId">
+                    { using (task03_0606.Models.FoodCourtDBEntities db = new task03_0606.Models.FoodCourtDBEntities()) {
+                            string stroeId = Session["storeId"].ToString();
+                            var orderDetailList = (from o in db.OrderDetials
+                                                   where o.orderId == order.orderId && o.Product.storeId== stroeId
+                                                   select o).ToList();
+                            var orderTotalAmount = 0;
+                            foreach (var orderDetail in orderDetailList) {
+                                orderTotalAmount += (orderDetail.productCount * orderDetail.Product.productPrice);
+                            }
+
+
+
+                        <tr class="orderListItem" data-orderid="@order.orderId"  data-orderdate="@order.orderDate">
                             <td> @string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderDate), (order.orderId + 10000)) </td>
                             <td> @string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderDate)) </td>
                             @*<td> @string.Format("{0:dd HH:mm}", (DateTime.Now-Convert.ToDateTime(order.orderDate))) </td>*@
                             <td> @order.phoneNum</td>
                             <td> @order.tableId</td>
-                            <td> @(order.orderState == 2 ? "訂單完成" : "待出餐") </td>
+                            <td> @orderTotalAmount</td>
+                            <td>@(order.orderState == 2 ? "訂單完成" : "待出餐") </td>
                         </tr>
+                        }
                     }
-
                 </tbody>
             </table>
         </div>
@@ -64,9 +77,7 @@
 
                 <div>
                     訂單編號：<label id="orderDetail_orderID" name="orderDetail_orderID"></label>
-                    客戶電話：<label id="orderDetail_customerPhone" name="orderDetail_customerPhone"></label>
-                    座位：<label id="orderDetail_seatID" name="orderDetail_seatID"></label>
-                    訂餐時間：<label id="orderDetail_time" name="orderDetail_time"></label>
+                    
                 </div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -78,15 +89,14 @@
                         <thead>
                             <tr>
                                 <th>項次</th>
-                                <th>廠商編號</th>
                                 <th>產品編號</th>
                                 <th>產品名稱</th>
                                 <th>數量</th>
                                 <th>單價</th>
                                 <th>小計</th>
                                 <th>訂單備註</th>
-                                <th>結單時間</th>
-                                <th>..</th>
+                                <th>產品狀態</th>
+                                
                             </tr>
                         </thead>
                         <tbody id="detailList">
@@ -119,8 +129,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button id="orderOK" type="button" class="btn btn-primary">出餐</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉</button>
             </div>
         </div>
     </div>
@@ -132,10 +141,33 @@
         alert("開始日期: "+ $("#beginDate").val() + "  結束日期: " + $("#endDate").val());
     }
 
+    Date.prototype.Format = function (fmt) { //author: meizz
+        var o = {
+            "M+": this.getMonth() + 1, //月份
+            "d+": this.getDate(), //日
+            "h+": this.getHours(), //小时
+            "m+": this.getMinutes(), //分
+            "s+": this.getSeconds(), //秒
+            "q+": Math.floor((this.getMonth() + 3) / 3), //季度
+            "S": this.getMilliseconds() //毫秒
+        };
+        if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+        for (var k in o)
+            if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+        return fmt;
+    }
+
     $(".orderListItem").click(function () {
         //alert($(this).data("orderid"));
         $('#exampleModalCenter').modal('show');
-        var orderId = $(this).data("orderid")
+
+        var orderId = $(this).data("orderid");
+        var orderDate = new Date($(this).data("orderdate"));
+        var orderIdString = orderDate.getFullYear().toString() + (orderDate.getMonth() + 101).toString().substring(1, 3) + (orderDate.getDate() + 100).toString().substring(1, 3) + (orderId+10000)
+
+       // alert(orderIdString);
+        $("#orderDetail_orderID").text(orderIdString);
+
         $.ajax({
             method: "post",
             url: '@Url.Action("Order_list_history_bussiness", "Order")',
@@ -149,13 +181,13 @@
             var countSum = 0;
             var amountSum = 0;
             $.each(dataList, function (index, data) {
-                $("#detailList").append('<tr><td>' + (index + 1) + '</td><td>' + data.productID + '</td><td>' + data.productName + '</td><td>' + data.unitPrice + '</td><td>' + data.productCount + '</td><td>' + data.unitPrice * data.productCount + '</td><td>' + data.unitPrice * data.productCount + '</td><td>' + data.customerNote + '</td><td>' + data.productionStatus + '</td><td><input type="checkbox" />ok</td></tr >');
+                $("#detailList").append('<tr><td>' + (index + 1) + '</td><td>' + data.productID + '</td><td>' + data.productName + '</td><td>' + data.unitPrice + '</td><td>' + data.productCount + '</td><td>' + data.unitPrice * data.productCount + '</td><td>' + data.customerNote + '</td><td>' + (data.productionStatus == 1 ? "待準備" : "準備完成") + '</td></tr >');
                 countSum += data.productCount;
                 amountSum += data.productCount * data.unitPrice;
             });
             $("#detailSum").empty();
-            $("#detailSum").append('<tr><td>總計</td><td></td ><td></td><td></td><td>' + countSum + '</td><td></td><td>' + amountSum + '</td><td></td><td></td></tr >');
-           
+            $("#detailSum").append('<tr><td>總計</td><td></td ><td></td><td></td><td>' + countSum + '</td><td>' + amountSum + '</td><td></td><td></td></tr >');
+
         });
 
 
