--- a/task03_0606/Views/Products/Drinkproducts.cshtml
+++ b/task03_0606/Views/Products/Drinkproducts.cshtml
@@ -42,7 +42,7 @@
 
                 <div class="row"id="list"></div>
                 <!-- Button trigger modal -->
-                <img src='~/photo/@db.productPicture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productID" />
+                <img src='~/photo/@db.productPicture' width='300' type="img" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productID" />
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModalCenter.@db.productID" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle.@db.productID" aria-hidden="true">
