--- a/task03_0606/Views/Products/Fastfoodproducts.cshtml
+++ b/task03_0606/Views/Products/Fastfoodproducts.cshtml
@@ -26,7 +26,7 @@
         <div class="col-sm">
             <div class="product--green col-sm-12">
                 <!-- Button trigger modal -->
-                <img src='~/photo/@db.productPicture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productID" />
+                <img src='~/photo/@db.productPicture' width='300' data-toggle="modal" data-target="#exampleModalCenter.@db.productID" />
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModalCenter.@db.productID" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle.@db.productID" aria-hidden="true">
