--- a/task03_0606/Views/Products/Dessertproducts.cshtml
+++ b/task03_0606/Views/Products/Dessertproducts.cshtml
@@ -45,8 +45,8 @@
                             </div>
                             <div class="modal-footer">
 
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button id="button1" type="button" class="btn btn-primary" onclick="AddToCart(@db.productID)">Add to basket</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉</button>
+                                <button id="button1" type="button" class="btn btn-primary" onclick="AddToCart(@db.productID)">放入購物車</button>
                             </div>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                 <div class='product_inner'>
                     <p>@db.productName</p>
                     <p class="">售價 <i class="fa fa-dollar"></i> @db.productPrice</p>
-                    <button type="button" id="button1" onclick="AddToCart(@db.productID)">放入購物車</button>
+                    <button type="button" id="button2" onclick="AddToCart(@db.productID)">放入購物車</button>
                 </div>
 
                 <div class='product_overlay'>
@@ -65,8 +65,7 @@
             <br />
         </div>
         if (counter % 6 == 0) {
-            @:
-        </div><br /><div class="row">
+            @:</div><br /><div class="row">
             counter = 0;
         }
         counter++;
@@ -74,14 +73,5 @@
 </div>
 
 <script>
-    $(document).ready(function () {
-        $("button").click(function () {
-            swal({
-                type: 'success',
-                title: '成功放入購物車',
-                showConfirmButton: false,
-                timer: 1000
-            })
-        });
-    });
+    
 </script>
