--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -271,8 +271,27 @@
 <script src="~/startbootstrap-sb-admin-gh-pages/js/sb-admin-datatables.min.js"></script>
 @*<script src="~/startbootstrap-sb-admin-gh-pages/js/sb-admin-charts.min.js"></script>*@
 
+
 <script>
-    $(document).ready(function () { console.log("ready"); });
+    $(document).ready(function () {
+        console.log("ready");
+        $("#button1").click(function () {
+            swal({
+                type: 'success',
+                title: '成功放入購物車',
+                showConfirmButton: false,
+                timer: 1000
+            })
+        });
+        $("#button2").click(function () {
+            swal({
+                type: 'success',
+                title: '成功放入購物車',
+                showConfirmButton: false,
+                timer: 1000
+            })
+        });
+    });
 
     //產品加入購物車
     function AddToCart(productId) {
