--- a/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
@@ -4,138 +4,72 @@
     ViewBag.Title = "Order_deteail_bussiness";
 }
 
-<style>
-    /*.table td, .table th {
-        padding: 0rem;
-        vertical-align: top;
-        border-top: 1px solid #dee2e6;
-    }*/
 
-    .rwd-table {
-        background: #fff;
-        overflow: hidden;
-    }
 
-        .rwd-table tr:nth-of-type(2n) {
-            background: #eee;
-        }
-
-        .rwd-table th,
-        .rwd-table td {
-            margin: 0.5em 1em;
-        }
-
-    .rwd-table {
-        min-width: 100%;
-    }
-
-        .rwd-table th {
-            display: none;
-        }
-
-        .rwd-table td {
-            display: block;
-        }
-
-            .rwd-table td:before {
-                content: attr(data-th);
-                font-weight: bold;
-                width: 6.5em;
-                display: inline-block;
-            }
-
-        .rwd-table th,
-        .rwd-table td {
-            text-align: left;
-        }
-
-            .rwd-table th,
-            .rwd-table td:before {
-                /*color: #D20B2A;*/
-                font-weight: bold;
-            }
-
-    @@media (min-width: 480px) {
-
-        .rwd-table td:before {
-            display: none;
-        }
-
-        .rwd-table th, .rwd-table td {
-            display: table-cell;
-            padding: 0.25em 0.5em;
-        }
-
-            .rwd-table th:first-child,
-            .rwd-table td:first-child {
-                padding-left: 0;
-            }
-
-            .rwd-table th:last-child,
-            .rwd-table td:last-child {
-                padding-right: 0;
-            }
-
-        .rwd-table th,
-        .rwd-table td {
-            padding: 1em !important;
-        }
-    }
-</style>
 
 <ol class="breadcrumb">
-    <li class="breadcrumb-item active">訂單明細</li>
+    <li class="breadcrumb-item">
+        <a href="~/Order/Order_list_bussiness">未出餐訂單-訂單別</a>
+    </li>
+    <li class="breadcrumb-item active">未出餐訂單-明細別</li>
 </ol>
 
 <div class="col-xl-12 col-sm-12 mb-12">
     <div class="card-header">
-        <i class="fa fa-table"></i>未出餐清單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
+        <i class="fa fa-table"></i>&nbsp; 未出餐-餐點清單<small class="pull-right text-muted">更新於 @string.Format("{0:yyyy/MM/dd/ HH:mm}", DateTime.Now.ToString())</small>
     </div>
     <div class="card-body">
 
-        <table class="table table-hover rwd-table">
-            <tr>
-                <th>接單時間</th>
-                <th>客戶電話</th>
-                <th>訂單單號</th>
-                <th>座位</th>
-                <th style="display:none">產品編號</th>
-                <th>產品編號</th>
-                <th>產品名稱</th>
-                <th>數量</th>
-                <th>單價</th>
-                <th>小計</th>
-                <th>備註</th>
-                <th>產品狀態</th>
-                <th></th>
-            </tr>
+        <div class="table-responsive-sm">
+            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>接單時間</th>
+                        <th>客戶電話</th>
+                        <th>訂單單號</th>
+                        <th>座位</th>
+                        <th style="display:none">產品編號</th>
+                        <th>產品編號</th>
+                        <th>產品名稱</th>
+                        <th>數量</th>
+                        <th>單價</th>
+                        <th>小計</th>
+                        <th>備註</th>
+                        <th>產品狀態</th>
+                        <th></th>
+                    </tr>
+                </thead>
 
-            
+                <tbody>
 
-                @foreach (task03_0606.Models.OrderDetailViewModel order in Model)
 
-        {
-        <tr>
-            <td data-th="接單時間："> @string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderTime))</td>
-            <td data-th="客戶電話："> @order.customerPhone </td>
-            <td data-th="訂單單號："> @string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderTime), (order.orderId + 10000))</td>
-            <td data-th="座位："> @order.seatID</td>
-            <td data-th="產品編號：" style="display:none"> @order.productID</td>
-            <td data-th="產品編號："> @order.productID</td>
-            <td data-th="產品名稱："> @order.productName</td>
-            <td data-th="數量："> @order.productCount</td>
-            <td data-th="單價："> @order.unitPrice</td>
-            <td data-th="小計："> @(order.unitPrice * order.productCount)</td>
-            <td data-th="備註："> @order.customerNote</td>
-            <td data-th="產品狀態："> @((order.productionStatus == 1)?"待準備": "準備完成" )</td>
-            <td> <button id="orderOk" type="button" class="btn btn-primary" onclick="foodDelivery(@order.productID,@order.orderId)">出餐</button> </td>
-        </tr>
 
-}
-               
-                
+                    @foreach (task03_0606.Models.OrderDetailViewModel order in Model)
+
+                    {
+                        <tr>
+                            <td data-th="接單時間："> @string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderTime))</td>
+                            <td data-th="客戶電話："> @order.customerPhone </td>
+                            <td data-th="訂單單號："> @string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderTime), (order.orderId + 10000))</td>
+                            <td data-th="座位："> @order.seatID</td>
+                            <td data-th="產品編號：" style="display:none"> @order.productID</td>
+                            <td data-th="產品編號："> @order.productID</td>
+                            <td data-th="產品名稱："> @order.productName</td>
+                            <td data-th="數量："> @order.productCount</td>
+                            <td data-th="單價："> @order.unitPrice</td>
+                            <td data-th="小計："> @(order.unitPrice * order.productCount)</td>
+                            <td data-th="備註："> @order.customerNote</td>
+                            <td data-th="產品狀態："> @((order.productionStatus == 1) ? "待準備" : "準備完成" )</td>
+                            <td> <button id="orderOk" type="button" class="btn btn-primary" onclick="foodDelivery(@order.productID,@order.orderId)">出餐</button> </td>
+                        </tr>
+
+                    }
+
+
+                </tbody>
 
             </table>
+        </div>
 
     </div>
 </div>
