--- a/task03_0606/Views/Order/Order_list_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_bussiness.cshtml
@@ -10,15 +10,14 @@
     }
 </style>
 
+
+
 <ol class="breadcrumb">
-    @*<li class="breadcrumb-item">
-            <a href="~/Home/Index"></a>
-        </li>*@
-    <li class="breadcrumb-item active">未出餐清單 </li>
-    @*<small class="pull-right text-muted">Updated yesterday at 11:59 PM</small>*@
+    <li class="breadcrumb-item">
+        <a href="~/Order/Order_deteail_bussiness">未出餐訂單-明細別</a>
+    </li>
+    <li class="breadcrumb-item active">未出餐訂單-訂單別</li>
 </ol>
-
-
 
 <div class="row">
     @foreach (var order in Model)
