--- a/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_history_bussiness.cshtml
@@ -13,60 +13,87 @@
     <li class="breadcrumb-item active">歷史訂單</li>
 </ol>
 
-<div class="col-xl-12 col-sm-12 mb-12">
-    <div class="card-header">
-        <i class="fa fa-table"></i>&nbsp; 訂單明細 <small class="pull-right text-muted">更新於 @string.Format("{0:yyyy/MM/dd/ HH:mm}", DateTime.Now.ToString())</small>
-    </div>
-    <div class="card-body">
-        接單起始日期：<input id="beginDate" type="date" />   接單截止日期：<input id="endDate" type="date" /> <button class="btn btn-success" onclick="queryBydate()">確認</button>
-        <div class="table-responsive-sm　table-sm">
-            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>訂單單號</th>
-                        <th>接單時間</th>
-                        @*<th>時間差</th>*@
-                        <th>客戶電話</th>
-                        <th>座位</th>
-                        <th>訂單小計</th>
-                        <th>訂單狀況</th>
-                    </tr>
-                </thead>
+<div class="row">
+    <div class="col-xl-12 col-sm-12 mb-12">
+        <div class="card-header">
+            <i class="fa fa-table"></i>&nbsp; 訂單明細 <small class="pull-right text-muted">更新於 @string.Format("{0:yyyy/MM/dd/ HH:mm}", DateTime.Now.ToString())</small>
+        </div>
+        <div class="card-body">
 
-                <tbody>
-
-
-                    @foreach (var order in Model)
-
-                    { using (task03_0606.Models.FoodCourtDBEntities db = new task03_0606.Models.FoodCourtDBEntities()) {
-                            string stroeId = Session["storeId"].ToString();
-                            var orderDetailList = (from o in db.OrderDetials
-                                                   where o.orderId == order.orderId && o.Product.storeId== stroeId
-                                                   select o).ToList();
-                            var orderTotalAmount = 0;
-                            foreach (var orderDetail in orderDetailList) {
-                                orderTotalAmount += (orderDetail.productCount * orderDetail.Product.productPrice);
-                            }
-
-
-
-                        <tr class="orderListItem" data-orderid="@order.orderId"  data-orderdate="@order.orderDate">
-                            <td> @string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderDate), (order.orderId + 10000)) </td>
-                            <td> @string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderDate)) </td>
-                            @*<td> @string.Format("{0:dd HH:mm}", (DateTime.Now-Convert.ToDateTime(order.orderDate))) </td>*@
-                            <td> @order.phoneNum</td>
-                            <td> @order.tableId</td>
-                            <td> @orderTotalAmount</td>
-                            <td>@(order.orderState == 2 ? "訂單完成" : "待出餐") </td>
+            @*<div class="form-row">
+                
+                <div class="form-group col-md-4 offset-2">
+                    <div class="row">
+                        <label class="control-label" for="beginDate" >接單起始日期：</label>
+                        
+                        <input id="beginDate" type="date" placeholder="date"/>
+                    </div>
+                    </div>
+                <div class="form-group col-md-4">
+                    <div class="row">
+                        <label class="control-label" for="endDate">接單截止日期：</label>
+                        <input id="endDate" type="date" /> <button class="btn btn-success" onclick="queryBydate()">確認</button>
+                    </div>
+                </div>
+            </div>*@
+            
+            @*訂單清單*@
+            <div class="table-responsive-sm">
+                <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>訂單單號</th>
+                            <th>接單時間</th>
+                            @*<th>時間差</th>*@
+                            <th>客戶電話</th>
+                            <th>座位</th>
+                            <th>訂單小計</th>
+                            <th>訂單狀況</th>
                         </tr>
-                        }
-                    }
-                </tbody>
-            </table>
+                    </thead>
+
+                    <tbody>
+
+
+                        @foreach (var order in Model)
+
+                            {
+                                using (task03_0606.Models.FoodCourtDBEntities db = new task03_0606.Models.FoodCourtDBEntities())
+                                {
+                                    string stroeId = Session["storeId"].ToString();
+                                    var orderDetailList = (from o in db.OrderDetials
+                                                           where o.orderId == order.orderId && o.Product.storeId == stroeId
+                                                           select o).ToList();
+                                    var orderTotalAmount = 0;
+                                    foreach (var orderDetail in orderDetailList)
+                                    {
+                                        orderTotalAmount += (orderDetail.productCount * orderDetail.Product.productPrice);
+                                    }
+
+
+
+                            <tr class="orderListItem" data-orderid="@order.orderId" data-orderiddate="@string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderDate), (order.orderId + 10000))">
+                                <td> @string.Format("{0:yyyyMMdd}{1}", Convert.ToDateTime(order.orderDate), (order.orderId + 10000)) </td>
+                                <td> @string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderDate)) </td>
+                                @*<td> @string.Format("{0:dd HH:mm}", (DateTime.Now-Convert.ToDateTime(order.orderDate))) </td>*@
+                                <td> @order.phoneNum</td>
+                                <td> @order.tableId</td>
+                                <td> @orderTotalAmount</td>
+                                <td>@(order.orderState == 2 ? "訂單完成" : "待出餐") </td>
+                            </tr>
+                                }
+                            }
+                    </tbody>
+                </table>
+            </div>
+
         </div>
 
+        
     </div>
 </div>
+
+
 
 <!-- Modal -->
 @*訂單明細彈跳視窗*@
@@ -77,7 +104,7 @@
 
                 <div>
                     訂單編號：<label id="orderDetail_orderID" name="orderDetail_orderID"></label>
-                    
+
                 </div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -96,7 +123,7 @@
                                 <th>小計</th>
                                 <th>訂單備註</th>
                                 <th>產品狀態</th>
-                                
+
                             </tr>
                         </thead>
                         <tbody id="detailList">
@@ -138,40 +165,35 @@
 
 <script>
     function queryBydate() {
-        alert("開始日期: "+ $("#beginDate").val() + "  結束日期: " + $("#endDate").val());
+        alert("開始日期: " + $("#beginDate").val() + "  結束日期: " + $("#endDate").val());
     }
 
-    Date.prototype.Format = function (fmt) { //author: meizz
-        var o = {
-            "M+": this.getMonth() + 1, //月份
-            "d+": this.getDate(), //日
-            "h+": this.getHours(), //小时
-            "m+": this.getMinutes(), //分
-            "s+": this.getSeconds(), //秒
-            "q+": Math.floor((this.getMonth() + 3) / 3), //季度
-            "S": this.getMilliseconds() //毫秒
-        };
-        if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
-        for (var k in o)
-            if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
-        return fmt;
-    }
 
+    $(document).ready(function () {
+        let today = new Date().toISOString().substr(0, 10);
+        document.querySelector("#beginDate").value = today;
+        document.querySelector("#endDate").value = today;
+       
+    })
+
+
+
+    //點選訂單，浮出Modal訂單明細
     $(".orderListItem").click(function () {
         //alert($(this).data("orderid"));
         $('#exampleModalCenter').modal('show');
 
         var orderId = $(this).data("orderid");
-        var orderDate = new Date($(this).data("orderdate"));
-        var orderIdString = orderDate.getFullYear().toString() + (orderDate.getMonth() + 101).toString().substring(1, 3) + (orderDate.getDate() + 100).toString().substring(1, 3) + (orderId+10000)
+        var orderIDDate = $(this).data("orderiddate");
 
-       // alert(orderIdString);
-        $("#orderDetail_orderID").text(orderIdString);
+        //alert(orderIDDate);
+
+        $("#orderDetail_orderID").text(orderIDDate);
 
         $.ajax({
             method: "post",
             url: '@Url.Action("Order_list_history_bussiness", "Order")',
-            data:{
+            data: {
                 orderId: parseInt(orderId),
             },
         }).done(function (dataList) {
@@ -187,10 +209,7 @@
             });
             $("#detailSum").empty();
             $("#detailSum").append('<tr><td>總計</td><td></td ><td></td><td></td><td>' + countSum + '</td><td>' + amountSum + '</td><td></td><td></td></tr >');
-
         });
-
-
     })
 
 </script>
